# robotArmApp

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave
enc_temp_folder/b23ecb9e9d31e05337fb2eddbe99511/: RobotHandler.cpp
enc_temp_folder/c9f043f443c642978ad3891f429cff2/: RobotControlDialog.cpp
enc_temp_folder/dfffc85bf38fb4c961e8c9512b36aab4/: RobotHandler.cpp
library-calibration/: CalibrationHandler.cpp  CalibrationHandler.h
library-log/: LogHandler.cpp  LogHandler.h
library-processing/: ImageProcessor.cpp  ImageProcessor.h
library-robot/: RobotConfig.h  RobotControlDialog.cpp  RobotControlDialog.h  RobotControlDialog.ui  RobotHandler.cpp  RobotHandler.h
library-serial/: SerialConnectionSetupDialog.cpp  SerialConnectionSetupDialog.h  SerialConnectionSetupDialog.ui  SerialMonitorDialog.cpp  SerialMonitorDialog.h  SerialMonitorDialog.ui  SerialPortHandler.cpp  SerialPortHandler.h
library-video/: ClickableLabel.cpp  ClickableLabel.h  VideoCalibrationDialog.cpp  VideoCalibrationDialog.h  VideoCalibrationDialog.ui  VideoCameraHandler.cpp  VideoCameraHandler.h  VideoCaptureHandler.cpp  VideoCaptureHandler.h  VideoConnectionDialog.cpp  VideoConnectionDialog.h  VideoConnectionDialog.ui  VideoManagerDialog.cpp  VideoManagerDialog.h  VideoManagerDialog.ui  VideoProcessingDialog.cpp  VideoProcessingDialog.h  VideoProcessingDialog.ui  VideoSettingsDialog.cpp  VideoSettingsDialog.h  VideoSettingsDialog.ui
library-video/example/: videoCamera.cpp
